--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   http: ^0.13.4
   web_socket_channel: ^2.1.0
   provider: ^6.0.2
-  syncfusion_flutter_charts: ^19.4.56
+  syncfusion_flutter_charts: ^20.1.47+1
 
 dev_dependencies:
   flutter_test:
