--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   web_socket_channel: ^2.1.0
   provider: ^6.0.2
   syncfusion_flutter_charts: ^20.1.47+1
+  loggy: ^2.0.1+1
+  flutter_loggy : ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
