--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,10 @@ dependencies:
   http: ^0.13.4
   web_socket_channel: ^2.1.0
   provider: ^6.0.2
-  syncfusion_flutter_charts: ^20.1.47+1
+  syncfusion_flutter_charts: ^20.1.48
   loggy: ^2.0.1+1
   flutter_loggy : ^2.0.0+3
+  rxdart: ^0.27.3
 
 dev_dependencies:
   flutter_test:
