--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,7 +23,12 @@ linter:
   # producing the lint.
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+     prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+     require_trailing_commas: true
+     annotate_overrides: true
+     constant_identifier_names: ALL_CAPS_WITH_UNDERSCORES
+     always_use_package_imports: true
+
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
