--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,14 +33,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.4
+  cupertino_icons: ^1.0.5
   http: ^0.13.4
   web_socket_channel: ^2.2.0
-  provider: ^6.0.2
-  syncfusion_flutter_charts: ^20.1.55
+  provider: ^6.0.3
+  syncfusion_flutter_charts: ^20.1.58+1
   loggy: ^2.0.1+1
   flutter_loggy : ^2.0.0+3
-  rxdart: ^0.27.3
+  rxdart: ^0.27.4
   shared_preferences: ^2.0.15
 
 dev_dependencies:
