--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,10 @@ dependencies:
   http: ^0.13.4
   web_socket_channel: ^2.2.0
   provider: ^6.0.3
-  syncfusion_flutter_charts: ^20.1.60+1
+  syncfusion_flutter_charts: ^20.2.40
   loggy: ^2.0.1+1
   flutter_loggy : ^2.0.0+3
-  rxdart: ^0.27.4
+  rxdart: ^0.27.5
   shared_preferences: ^2.0.15
 
 dev_dependencies:
